# projecteuler.net

./: README.md
Eul_1/: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake
Eul_1/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
Eul_1/eul_1.build/Debug/ALL_BUILD.build/: Script-3F26F63DA83D45438EB84651.sh  dgph  dgph~
Eul_1/eul_1.build/Debug/ZERO_CHECK.build/: Script-A6F27933A9F3442FA0C6251F.sh  dgph~
Eul_1/eul_1.xcodeproj/: project.pbxproj
Eul_1/src/: CMakeLists.txt  cmake_install.cmake  main.cpp
Eul_1/src/eul_1.build/Debug/eul_1.build/: dgph  (+1 more)
Eul_1/src/headers/: eul_1_facilities.h
Eul_1/text/: INFO.txt
Eul_2/: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake
Eul_2/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
Eul_2/eul_2.build/Debug/ALL_BUILD.build/: Script-B6424115ED514861BDAD3EBD.sh  dgph  dgph~
Eul_2/eul_2.build/Debug/ZERO_CHECK.build/: Script-27ECFB55267A4EFB90884204.sh  dgph
Eul_2/eul_2.xcodeproj/: project.pbxproj
Eul_2/src/: CMakeLists.txt  cmake_install.cmake  main.cpp
Eul_2/src/eul_2.build/Debug/eul_2.build/: dgph
Eul_2/src/eul_2.build/Debug/eul_2.build/Objects-normal/x86_64/: eul_2.LinkFileList
Eul_2/src/headers/: eul_2_facilities.h
Eul_2/text/: INFO.txt
Eul_3/: class.cpp  class.hpp  main.cpp
Eul_3/DerivedData/Eul_3/: info.plist
Eul_3/DerivedData/Eul_3/TextIndex/: TextFragmentIndex-v5.idx
Eul_3/DerivedData/ModuleCache/: Session.modulevalidation
Eul_3/Eul_3.xcodeproj/: project.pbxproj
Eul_3/Eul_3.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Eul_3/Eul_3.xcodeproj/xcshareddata/xcschemes/: Eul_3.xcscheme
(+13 files in other folders)
